--- a/CooksCorner1.0/Web.config
+++ b/CooksCorner1.0/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\CooksCorner1.0.mdf;Initial Catalog=CooksCorner1.0;Integrated Security=True" providerName="System.Data.SqlClient" />
+     <add name="DefaultCornerConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\CooksCorner1.0.mdf;Initial Catalog=CooksCorner1.0;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="CooksCornerConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\CooksCorner1.0.mdf;Initial Catalog=CooksCorner1.0;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
